--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -5,12 +5,12 @@ jobs:
     runs-on: ubuntu-latest
     name: Test Liquibase Action
     steps:
+      - uses: actions/checkout@v2
       - name: Install Liquibase
         run: |
           curl -sSL -o liquibase-4.3.0-DAT-5700-SNAPSHOT.tar.gz https://jenkins.datical.net/job/liquibase-pro/job/DAT-5700/13/artifact/liquibase/liquibase-dist/target/liquibase-4.3.0-DAT-5700-SNAPSHOT.tar.gz
           mkdir bin
-          tar -xf liquibase.tar.gz -C ./bin
-      - uses: actions/checkout@v2
+          tar -xf liquibase-4.3.0-DAT-5700-SNAPSHOT.tar.gz -C ./bin
       - uses: liquibase/liquibase-github-action@v1
         with:
           operation: 'update'
