--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -10,6 +10,8 @@ jobs:
         run: |
           curl -sSL -o liquibase-4.3.0-DAT-5700-SNAPSHOT.tar.gz https://jenkins.datical.net/job/liquibase-pro/job/DAT-5700/13/artifact/liquibase/liquibase-dist/target/liquibase-4.3.0-DAT-5700-SNAPSHOT.tar.gz
           mkdir bin
+          pwd
+          ls
           tar -xf liquibase-4.3.0-DAT-5700-SNAPSHOT.tar.gz -C ./bin
       - uses: liquibase/liquibase-github-action@v1
         with:
