DAT-5700: Another try with directory issue.

--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -8,13 +8,13 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install Liquibase
         run: |
+          curl -sSL -o liquibase-4.3.0-DAT-5700-SNAPSHOT.tar.gz https://jenkins.datical.net/job/liquibase-pro/job/DAT-5700/13/artifact/liquibase/liquibase-dist/target/liquibase-4.3.0-DAT-5700-SNAPSHOT.tar.gz
           mkdir bin
+          cp liquibase-4.3.0-DAT-5700-SNAPSHOT.tar.gz /bin
           cd bin
           pwd
           ls
-          curl -sSL -o liquibase-4.3.0-DAT-5700-SNAPSHOT.tar.gz https://jenkins.datical.net/job/liquibase-pro/job/DAT-5700/13/artifact/liquibase/liquibase-dist/target/liquibase-4.3.0-DAT-5700-SNAPSHOT.tar.gz
-          ls
-          tar -xf liquibase-4.3.0-DAT-5700-SNAPSHOT.tar.gz -C ./bin
+          tar --verbose -xf liquibase-4.3.0-DAT-5700-SNAPSHOT.tar.gz -C .
       - uses: liquibase/liquibase-github-action@v1
         with:
           operation: 'update'
