DAT-5700: Sudo make me a sandwich??

--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -10,7 +10,7 @@ jobs:
         run: |
           curl -sSL -o liquibase-4.3.0-DAT-5700-SNAPSHOT.tar.gz https://jenkins.datical.net/job/liquibase-pro/job/DAT-5700/13/artifact/liquibase/liquibase-dist/target/liquibase-4.3.0-DAT-5700-SNAPSHOT.tar.gz
           mkdir bin
-          cp liquibase-4.3.0-DAT-5700-SNAPSHOT.tar.gz /bin
+          sudo cp liquibase-4.3.0-DAT-5700-SNAPSHOT.tar.gz /bin
           cd bin
           pwd
           ls
