--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -12,6 +12,6 @@ jobs:
           operation: 'update'
           classpath: 'example/changelogs'
           changeLogFile: 'samplechangelog.h2.sql'
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
-          url: ${{ secrets.URL }}
+          username: dbuser
+          password: letmein
+          url: url=jdbc:h2:tcp://localhost:9090/mem:dev
