--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -6,7 +6,8 @@ jobs:
     name: Test Liquibase Action
     steps:
       - uses: actions/checkout@v2
-      - uses: XDelphiGrl/liquibase-github-action@v4.1
+      - uses: XDelphiGrl/docker@v3.5
+      - uses: XDelphiGrl/liquibase/liquibase-github-action@v4.1
         with:
           operation: 'update'
           classpath: 'example/changelogs'
