--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -8,6 +8,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: XDelphiGrl/liquibase-github-action@v5.0
         with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
           operation: 'update'
           classpath: 'example/changelogs'
           changeLogFile: 'samplechangelog.h2.sql'
