--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -6,9 +6,14 @@ jobs:
     name: Test Liquibase Action
     steps:
       - uses: actions/checkout@v2
+         name: Login to GitHub Packages Docker Registry
+      - uses: docker/login-action@v1
+        with:
+          registry: docker.pkg.github.com
+          username: ${{ XDelphiGrl }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - uses: XDelphiGrl/liquibase-github-action@v5.0
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
           operation: 'update'
           classpath: 'example/changelogs'
           changeLogFile: 'samplechangelog.h2.sql'
