--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -6,7 +6,7 @@ jobs:
     name: Test Liquibase Action
     steps:
       - uses: actions/checkout@v2
-      - uses: XDelphGrl/docker-login@latest
+      - uses: XDelphGrl/docker-login@v0.1
       - uses: XDelphiGrl/liquibase-github-action@v5.0
         with:
           operation: 'update'
