--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -1,6 +1,36 @@
 on: [push]
 
 jobs:
+jobs:
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: echo Hello, world!
+
+      # Runs a set of commands using the runners shell
+      - name: Run a multi-line script
+        run: |
+          echo Add other actions to build,
+          echo test, and deploy your project.
+
+      # Login to GitHub Package Registry
+      -
+        name: Login to GitHub Package Registry
+        uses: XDelphiGrl/login-action@v0.1
+        with:
+          registry: docker.pkg.github.com
+          username: XDelphiGrl
+          password: ${{ secrets.GITHUB_TOKEN }}
+          
   test-liquibase-action:
     runs-on: ubuntu-latest
     name: Test Liquibase Action
