--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -44,7 +44,7 @@ jobs:
 
       - uses: actions/checkout@v2
       - uses: XDelphiGrl/login-action@v0.1
-      - uses: XDelphiGrl/liquibase-github-action@v5.3
+      - uses: XDelphiGrl/liquibase-github-action@5.3
         with:
           operation: 'update'
           classpath: 'example/changelogs'
