DAT-5700: logout false

--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -29,19 +29,12 @@ jobs:
           registry: docker.pkg.github.com
           username: XDelphiGrl
           password: ${{ secrets.GITHUB_TOKEN }}
+          logout: false
           
   test-liquibase-action:
     runs-on: ubuntu-latest
     name: Test Liquibase Action
     steps:
-      -
-        name: Login to GitHub Package Registry
-        uses: XDelphiGrl/login-action@v0.1
-        with:
-          registry: docker.pkg.github.com
-          username: XDelphiGrl
-          password: ${{ secrets.GITHUB_TOKEN }}
-
       - uses: actions/checkout@v2
       - uses: XDelphiGrl/login-action@v0.1
       - uses: XDelphiGrl/liquibase-github-action@v5.1
