--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -36,8 +36,7 @@ jobs:
     name: Test Liquibase Action
     steps:
       - uses: actions/checkout@v2
-      - uses: XDelphiGrl/login-action@v0.1
-      - uses: XDelphiGrl/liquibase-github-action@v5.2
+      - uses: XDelphiGrl/liquibase-github-action@5.3
         with:
           operation: 'update'
           classpath: 'example/changelogs'
