--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -9,8 +9,8 @@ jobs:
       - uses: XDelphiGrl/liquibase-github-action@v7.0
         with:
           operation: 'update'
-          classpath: 'example/changelogs'
-          changeLogFile: 'samplechangelog.h2.sql'
-          username: dbuser
-          password: letmein
-          url: url=jdbc:h2:tcp://localhost:9090/mem:dev
+          changeLogFile: samplechangelog.h2.sql
+          url: jdbc:h2:file:./H2_project/h2tutorial
+          username: liqubase
+          password: password
+          logLevel: info
