--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -10,7 +10,7 @@ jobs:
         with:
           operation: 'update'
           classpath: /liquibase/changelog:/liquibase/classpath:/
-          changeLogFile: samplechangelog.h2.sql
+          changeLogFile: /example/changelogs/samplechangelog.h2.sql
           url: jdbc:h2:file:./H2_project/h2tutorial
           username: liqubase
           password: password
