--- a/.github/workflows/checks-workflow.yml
+++ b/.github/workflows/checks-workflow.yml
@@ -8,7 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: liquibase/liquibase-github-action@v4
+      - uses: XDelphiGrl/erz-liquibase-github-action@v7.2
+      - uses: ./
         with:
           operation: 'checks run'
           changeLogFile: 'samplechangelog.h2.sql'
