--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -13,6 +13,6 @@ jobs:
           operation: 'update'
           classpath: 'example/changelogs'
           changeLogFile: 'samplechangelog.h2.sql'
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
-          url: ${{ secrets.URL }}
+          username: ${{ secrets.DBUSERNAME }}
+          password: ${{ secrets.DBPASSWORD }}
+          url: ${{ secrets.DBURL }}
