DAT-8009: Add classpath to checks workflow.

--- a/.github/workflows/checks-workflow.yml
+++ b/.github/workflows/checks-workflow.yml
@@ -11,6 +11,7 @@ jobs:
       - uses: XDelphiGrl/erz-liquibase-github-action@v7.2
         with:
           operation: 'checks run'
+          classpath: 'example/changelogs'
           changeLogFile: 'samplechangelog.h2.sql'
           checksSettingsFile: 'liquibase.checks-settings.conf'
           proLicenseKey: ${{ secrets.LIQUIBASE_LICENSE_KEY }}
