Change checksettings file name
Not at all sure why this would matter but ...

--- a/.github/workflows/checks-workflow.yml
+++ b/.github/workflows/checks-workflow.yml
@@ -13,5 +13,5 @@ jobs:
           operation: 'checks run'
           classpath: 'example/changelogs'
           changeLogFile: 'samplechangelog.h2.sql'
-          checksSettingsFile: 'liquibase.checks-settings.conf'
+          checksSettingsFile: 'checkssettings.conf'
           proLicenseKey: ${{ secrets.LIQUIBASE_LICENSE_KEY }}
