--- a/example/changelogs/checksettings.conf
+++ b/example/changelogs/checksettings.conf
@@ -6,15 +6,15 @@ For help using quality checks, visit the documentation at https://docs.liquibase
 -----------------------------------------------------------------------------------------------
 !!com.datical.liquibase.ext.checks.config.model.CheckSettingsConfig
 rules:
-- !!com.datical.liquibase.ext.checks.config.model.BasicRule {enabled: true, id: !!java.util.UUID '38fc7edf-9a60-3d00-8b40-23c7e719745f',
+- !!com.datical.liquibase.ext.checks.config.model.BasicRule {enabled: false, id: !!java.util.UUID '38fc7edf-9a60-3d00-8b40-23c7e719745f',
   severity: INFO}
-- !!com.datical.liquibase.ext.checks.config.model.BasicRule {enabled: true, id: !!java.util.UUID '0b73828f-2e8d-3c36-b1c3-7153bcb6f160',
+- !!com.datical.liquibase.ext.checks.config.model.BasicRule {enabled: false, id: !!java.util.UUID '0b73828f-2e8d-3c36-b1c3-7153bcb6f160',
   severity: INFO}
-- !!com.datical.liquibase.ext.checks.config.model.BasicRule {enabled: true, id: !!java.util.UUID '218fa8f2-ea81-308e-b010-5c25cf62c8fc',
+- !!com.datical.liquibase.ext.checks.config.model.BasicRule {enabled: false, id: !!java.util.UUID '218fa8f2-ea81-308e-b010-5c25cf62c8fc',
   severity: INFO}
-- !!com.datical.liquibase.ext.checks.config.model.BasicRule {enabled: true, id: !!java.util.UUID '223ed841-5f53-3eab-8ca8-f66393c689a4',
+- !!com.datical.liquibase.ext.checks.config.model.BasicRule {enabled: false, id: !!java.util.UUID '223ed841-5f53-3eab-8ca8-f66393c689a4',
   severity: INFO}
-- !!com.datical.liquibase.ext.checks.config.model.BasicRule {enabled: true, id: !!java.util.UUID 'e98e0a4d-0582-360b-a89f-37b2f65e65d2',
+- !!com.datical.liquibase.ext.checks.config.model.BasicRule {enabled: false, id: !!java.util.UUID 'e98e0a4d-0582-360b-a89f-37b2f65e65d2',
   severity: INFO}
 - !!com.datical.liquibase.ext.checks.config.model.DynamicRule
   description: This check scans raw SQL for the presence of specific patterns and
@@ -55,6 +55,20 @@ rules:
   severity: INFO
   shortName: ObjectNameMustMatch
 - !!com.datical.liquibase.ext.checks.config.model.DynamicRule
+  description: This check confirms the listed object names conform to the supplied
+    pattern.
+  enabled: false
+  id: !!java.util.UUID 'fb95ee93-222e-3c4f-bb4e-3a37ed17f5a0'
+  name: Object name pattern match
+  parameters:
+  - {parameter: OPERATOR, value: CONTAINS}
+  - {parameter: SEARCH_STRING, value: abc}
+  - {parameter: OBJECT_TYPES, value: TABLE}
+  - {parameter: CASE_SENSITIVE, value: false}
+  parentRuleId: !!java.util.UUID '51362082-ddc1-34dc-98f6-c7413345b19b'
+  severity: INFO
+  shortName: ObjectNameMustMatch1
+- !!com.datical.liquibase.ext.checks.config.model.DynamicRule
   description: This check confirms the listed object names do not match the supplied
     pattern.
   enabled: false
@@ -69,6 +83,20 @@ rules:
   severity: INFO
   shortName: ObjectNameMustNotMatch
 - !!com.datical.liquibase.ext.checks.config.model.DynamicRule
+  description: This check confirms the listed object names do not match the supplied
+    pattern.
+  enabled: false
+  id: !!java.util.UUID '4bded0ed-d0f7-388c-b159-5a9e07335bd0'
+  name: Object name pattern not match
+  parameters:
+  - {parameter: OPERATOR, value: CONTAINS}
+  - {parameter: SEARCH_STRING, value: abdde}
+  - {parameter: OBJECT_TYPES, value: COLUMN}
+  - {parameter: CASE_SENSITIVE, value: true}
+  parentRuleId: !!java.util.UUID '1bd2ac39-66fd-31fc-ac37-d6ba4c6319cc'
+  severity: INFO
+  shortName: ObjectNameMustNotMatch1
+- !!com.datical.liquibase.ext.checks.config.model.DynamicRule
   description: This check warns a user when changeset includes or generates sql that
     grants specific privileges to a user or role
   enabled: false
@@ -79,17 +107,17 @@ rules:
   parentRuleId: null
   severity: INFO
   shortName: SqlGrantSpecificPrivsWarn
-- !!com.datical.liquibase.ext.checks.config.model.BasicRule {enabled: true, id: !!java.util.UUID '136bed9a-17c5-3edc-b1e7-30065052e859',
+- !!com.datical.liquibase.ext.checks.config.model.BasicRule {enabled: false, id: !!java.util.UUID '136bed9a-17c5-3edc-b1e7-30065052e859',
   severity: INFO}
-- !!com.datical.liquibase.ext.checks.config.model.BasicRule {enabled: true, id: !!java.util.UUID '892b5881-6d02-3846-bdf0-c8538e7b013f',
+- !!com.datical.liquibase.ext.checks.config.model.BasicRule {enabled: false, id: !!java.util.UUID '892b5881-6d02-3846-bdf0-c8538e7b013f',
   severity: INFO}
-- !!com.datical.liquibase.ext.checks.config.model.BasicRule {enabled: true, id: !!java.util.UUID 'a85a72fd-9d93-33cd-bbdb-59f21538af9d',
+- !!com.datical.liquibase.ext.checks.config.model.BasicRule {enabled: false, id: !!java.util.UUID 'a85a72fd-9d93-33cd-bbdb-59f21538af9d',
   severity: INFO}
-- !!com.datical.liquibase.ext.checks.config.model.BasicRule {enabled: true, id: !!java.util.UUID 'd517b518-8a6f-3084-a5be-97e7d89c6860',
+- !!com.datical.liquibase.ext.checks.config.model.BasicRule {enabled: false, id: !!java.util.UUID 'd517b518-8a6f-3084-a5be-97e7d89c6860',
   severity: INFO}
-- !!com.datical.liquibase.ext.checks.config.model.BasicRule {enabled: true, id: !!java.util.UUID '00da80be-8adf-3c05-9380-b2538ae3015a',
+- !!com.datical.liquibase.ext.checks.config.model.BasicRule {enabled: false, id: !!java.util.UUID '00da80be-8adf-3c05-9380-b2538ae3015a',
   severity: INFO}
-- !!com.datical.liquibase.ext.checks.config.model.BasicRule {enabled: true, id: !!java.util.UUID 'e56b7a4a-5953-3be3-96d2-0814eb8e7a02',
+- !!com.datical.liquibase.ext.checks.config.model.BasicRule {enabled: false, id: !!java.util.UUID 'e56b7a4a-5953-3be3-96d2-0814eb8e7a02',
   severity: INFO}
-- !!com.datical.liquibase.ext.checks.config.model.BasicRule {enabled: true, id: !!java.util.UUID '517fcf2f-769c-3916-af1c-4c6aeef37914',
+- !!com.datical.liquibase.ext.checks.config.model.BasicRule {enabled: false, id: !!java.util.UUID '517fcf2f-769c-3916-af1c-4c6aeef37914',
   severity: INFO}
