--- a/.github/workflows/checks-workflow.yml
+++ b/.github/workflows/checks-workflow.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: XDelphiGrl/erz-liquibase-github-action@v7.2
+      - uses: StevenMassaro/liquibase-github-action@v4-alpha
         with:
           operation: 'checks run'
           changeLogFile: 'example/changelogs/samplechangelog.h2.sql'
